--- a/PreviewSoln/PreviewWeb/wwwroot/Preview.html
+++ b/PreviewSoln/PreviewWeb/wwwroot/Preview.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--*****START OF Azure Media Player scripts*****-->
-    <link href="//amp.azure.net/libs/amp/latest/skins/amp-default/azuremediaplayer.min.css" rel="stylesheet">
-    <script src="//amp.azure.net/libs/amp/latest/azuremediaplayer.min.js"></script>
+    <link href="https://amp.azure.net/libs/amp/latest/skins/amp-default/azuremediaplayer.min.css" rel="stylesheet">
+    <script src="https://amp.azure.net/libs/amp/latest/azuremediaplayer.min.js"></script>
     <!--*****END OF Azure Media Player scripts*****-->
     <!--*****START OF AMP plugin scripts*****-->
     <script src="js/amp.preview.js"></script>
