split amp.preview.js into modules & utils files, split globals into globals file

--- a/Preview.html
+++ b/Preview.html
@@ -14,6 +14,10 @@
     <!--*****END OF Azure Media Player scripts*****-->
     <!--*****START OF AMP plugin scripts*****-->
     <script src="js/amp.preview.js"></script>
+    <script src="js/browserutils.js"></script>
+    <script src="js/globals.js"></script>
+    <script src="js/mpdutils.js"></script>
+    <script src="js/mseutils.js"></script>
     <!--*****END OF AMP plugin scripts*****-->
     <style type="text/css" media="screen">
         body {
