add browserify and tinyify, create bundle. todo: resolve bundle errs

--- a/src/static/Preview.html
+++ b/src/static/Preview.html
@@ -13,12 +13,12 @@
     <script src="https://amp.azure.net/libs/amp/latest/azuremediaplayer.min.js"></script>
     <!--*****END OF Azure Media Player scripts*****-->
     <!--*****START OF AMP plugin scripts*****-->
-    <script src="js/amp.preview.js"></script>
-    <script src="js/ampPlayer.js"></script>
-    <script src="js/browserutils.js"></script>
-    <script src="js/globals.js"></script>
-    <script src="js/mpdutils.js"></script>
-    <script src="js/mseutils.js"></script>
+    <script src="../amp.preview.js"></script>
+    <script src="../ampPlayer.js"></script>
+    <script src="../browserutils.js"></script>
+    <script src="../globals.js"></script>
+    <script src="../mpdutils.js"></script>
+    <script src="../mseutils.js"></script>
     <!--*****END OF AMP plugin scripts*****-->
     <style type="text/css" media="screen">
         body {
