--- a/src/static/Preview.html
+++ b/src/static/Preview.html
@@ -12,14 +12,12 @@
     <link href="https://amp.azure.net/libs/amp/latest/skins/amp-default/azuremediaplayer.min.css" rel="stylesheet">
     <script src="https://amp.azure.net/libs/amp/latest/azuremediaplayer.min.js"></script>
     <!--*****END OF Azure Media Player scripts*****-->
+
     <!--*****START OF AMP plugin scripts*****-->
-    <script src="../amp.preview.js"></script>
-    <script src="../ampPlayer.js"></script>
-    <script src="../browserutils.js"></script>
-    <script src="../globals.js"></script>
-    <script src="../mpdutils.js"></script>
-    <script src="../mseutils.js"></script>
+    <script src="js/ampPlayer.js"></script>
+    <script src="js/bundle.js"></script>
     <!--*****END OF AMP plugin scripts*****-->
+
     <style type="text/css" media="screen">
         body {
             margin: 4px;
