Fixed video preview feature. Ignored bundle file.

--- a/src/static/Preview.html
+++ b/src/static/Preview.html
@@ -60,7 +60,7 @@
                     </select>
                 </td>
                 <td>whether to print out debug info</td>
-                <td><input type="button" id="cmdPlay" value="OK" style="width: 45px;" onclick="play();" /></td>
+                <td><input type="button" id="cmdPlay" value="OK" style="width: 45px;" onclick="ampPlayer.play();" /></td>
             </tr>
         </table>
     </p>
