fix mseutils for <es6 compat, add bundle-minify.js build script, update npm build command

--- a/src/static/Preview.html
+++ b/src/static/Preview.html
@@ -12,8 +12,8 @@
     <script src="https://amp.azure.net/libs/amp/latest/azuremediaplayer.min.js"></script>
     <!--*****END OF Azure Media Player scripts*****-->
     <!--*****START OF AMP plugin scripts*****-->
-    <script src="js/ampPlayer.js"></script>
-    <script src="js/bundle.js"></script>
+    <script src="js/ampPlayer.min.js"></script>
+    <script src="js/bundle.min.js"></script>
     <!--*****END OF AMP plugin scripts*****-->
     <style type="text/css" media="screen">
         body {
